20190305:

  - Added "recursive" option for clone (tivrobo)

20180328:

  - Changed variables to match non windows git mudule names (project.hay)
  - Updated functions to be atomic and decoupled (project.hay)
  - Added more handling of the Changed result var (project.hay)

20170925:

  - fixes to manage correctly the branch desired (pablodav)
  - put changed status in correct place (changed status not handled correctly yet) (pablodav)

20170814:

   - added function get_version (pablodav)

20170811:

   - fixes to use Fail-Json to be compatible with ansible 2.3.2 (pablodav)
   - added options "update" and "branch" (pablodav)
   - fixes error when using git repo with http/https (pablodav)