@@ -8,32 +8,32 @@
 
 #Requires -Module Ansible.ModuleUtils.Legacy.psm1
 
-$params = Parse-Args -arguments $args -supports_check_mode $true
-$check_mode = Get-AnsibleParam -obj $params -name "_ansible_check_mode" -default $false
+$RawParameters = Parse-Args -arguments $args -supports_check_mode $true
+$ModuleParameters = New-Object psobject @{
+    check_mode     = Get-AnsibleParam -obj $RawParameters -name "_ansible_check_mode" -default $false
+    repo           = Get-AnsibleParam -obj $RawParameters -name "repo" -failifempty $true -aliases "name"
+    dest           = Get-AnsibleParam -obj $RawParameters -name "dest"
+    branch         = Get-AnsibleParam -obj $RawParameters -name "branch" -default "master"
+    clone          = ConvertTo-Bool (Get-AnsibleParam -obj $RawParameters -name "clone" -default $true)
+    update         = ConvertTo-Bool (Get-AnsibleParam -obj $RawParameters -name "update" -default $false)
+    resursive      = ConvertTo-Bool (Get-AnsibleParam -obj $RawParameters -name "recursive" -default $true)
+    replace_dest   = ConvertTo-Bool (Get-AnsibleParam -obj $RawParameters -name "replace_dest" -default $false)
+    accept_hostkey = ConvertTo-Bool (Get-AnsibleParam -obj $RawParameters -name "accept_hostkey" -default $false)
+}
 
-# Module Params
-$repo = Get-AnsibleParam -obj $params -name "repo" -failifempty $true -aliases "name"
-$dest = Get-AnsibleParam -obj $params -name "dest"
-$branch = Get-AnsibleParam -obj $params -name "branch" -default "master"
-$clone = ConvertTo-Bool (Get-AnsibleParam -obj $params -name "clone" -default $true)
-$update = ConvertTo-Bool (Get-AnsibleParam -obj $params -name "update" -default $false)
-$recursive = ConvertTo-Bool (Get-AnsibleParam -obj $params -name "recursive" -default $true)
-$replace_dest = ConvertTo-Bool (Get-AnsibleParam -obj $params -name "replace_dest" -default $false)
-$accept_hostkey = ConvertTo-Bool (Get-AnsibleParam -obj $params -name "accept_hostkey" -default $false)
-
-$result = New-Object psobject @{
-    win_git = New-Object psobject @{
-        repo           = $null
-        dest           = $null
-        clone          = $false
-        replace_dest   = $true
-        accept_hostkey = $true
-        update         = $false
-        recursive      = $true
-        branch         = "master"
+$ModuleResult = New-Object psobject @{
+    changed     = $false
+    msg         = $null
+    git_actions = @{
+        clone         = $false
+        checkout      = $false
+        pull          = $false
+        remote_update = $false
     }
-    changed = $false
-    cmd_msg = $null
+    status      = @{
+        branch      = $null
+        has_changes = $null
+    }
 }
 
 # Add Git to PATH variable
@@ -47,9 +47,10 @@ $env:Path += ";" + "C:\Program Files (x86)\Git\usr\bin"
 function Find-Command {
     [CmdletBinding()]
     param(
-        [Parameter(Mandatory = $true, Position = 0)] [string] $command
+        [Parameter(Mandatory = $true, Position = 0)] [string] $Command
     )
-    $installed = get-command $command -erroraction Ignore
+
+    $installed = get-command $Command -erroraction Ignore
     write-verbose "$installed"
     if ($installed) {
         return $installed
@@ -57,254 +58,320 @@ function Find-Command {
     return $null
 }
 
-function FindGit {
+function Find-Git {
     [CmdletBinding()]
     param()
+
     $p = Find-Command "git.exe"
-    if ($p -ne $null) {
+    if ($null -ne $p) {
         return $p
     }
+
     $a = Find-Command "C:\Program Files\Git\bin\git.exe"
-    if ($a -ne $null) {
+    if ($null -ne $a) {
         return $a
     }
-    Fail-Json -obj $result -message "git.exe is not installed. It must be installed (use chocolatey)"
+
+    Fail-Json $ModuleResult "Git is not installed. It must be installed (use chocolatey)."
 }
 
 # Remove dest if it exests
 function PrepareDestination {
     [CmdletBinding()]
-    param()
-    if ((Test-Path $dest) -And (-Not $check_mode)) {
-        try {
-            Remove-Item $dest -Force -Recurse | Out-Null
-            Set-Attr $result "cmd_msg" "Successfully removed dir $dest."
-            Set-Attr $result "changed" $true
-        }
-        catch {
-            $ErrorMessage = $_.Exception.Message
-            Fail-Json $result "Error removing $dest! Msg: $ErrorMessage"
-        }
+    param(
+        [string] $Destination
+    )
+    if (-Not (Test-Path $Destination)) {
+        return
     }
+    try {
+        Remove-Item $Destination -Force -Recurse
+    }
+    catch {
+        $ErrorMessage = $_.Exception.Message
+        Fail-Json $ModuleResult "Error removing destination. $ErrorMessage"
+    }
+    Set-Attr $ModuleResult "msg" "Successfully removed destination."
+    Set-Attr $ModuleResult "changed" $true
 }
 
 # SSH Keys
 function CheckSshKnownHosts {
     [CmdletBinding()]
-    param()
+    param(
+        [string] $RepositoryUrl,
+        [Parameter(Mandatory = $false)]
+        [bool] $AcceptHostkey
+    )
+    
     # Get the Git Hostrepo
-    $gitServer = $($repo -replace "^(\w+)\@([\w-_\.]+)\:(.*)$", '$2')
-    & cmd /c ssh-keygen.exe -F $gitServer | Out-Null
-    $rc = $LASTEXITCODE
+    $Domain = $($RepositoryUrl -replace "^(\w+)\@([\w-_\.]+)\:(.*)$", '$2')
+    & cmd /c ssh-keygen.exe -F $Domain
 
-    if ($rc -ne 0) {
-        # Host is unknown
-        if ($accept_hostkey) {
-            # workaroung for disable BOM
-            # https://github.com/tivrobo/ansible-win_git/issues/7
-            $sshHostKey = & cmd /c ssh-keyscan.exe -t ecdsa-sha2-nistp256 $gitServer
-            $sshHostKey += "`n"
-            $sshKnownHostsPath = Join-Path -Path $env:Userprofile -ChildPath \.ssh\known_hosts
-            [System.IO.File]::AppendAllText($sshKnownHostsPath, $sshHostKey, $(New-Object System.Text.UTF8Encoding $False))
+    if ($LASTEXITCODE -ne 0) {
+        # Host is unknown.
+        if (-Not $AcceptHostkey) {
+            Fail-Json -obj $ModuleResult "Unknown host."
         }
-        else {
-            Fail-Json -obj $result -message  "Host is not known!"
-        }
+        # Workaround for disable BOM.
+        # https://github.com/tivrobo/ansible-win_git/issues/7
+        $SshHostKey = & cmd /c ssh-keyscan.exe -t ecdsa-sha2-nistp256 $Domain
+        $SshHostKey += "`n"
+        $SshKnownHostsPath = Join-Path -Path $env:Userprofile -ChildPath \.ssh\known_hosts
+        [System.IO.File]::AppendAllText($SshKnownHostsPath, $SshHostKey, $(New-Object System.Text.UTF8Encoding $False))
     }
 }
 
 function CheckSshIdentity {
     [CmdletBinding()]
-    param()
+    param(
+        [string] $RepositoryUrl
+    )
 
-    & cmd /c git.exe ls-remote $repo | Out-Null
-    $rc = $LASTEXITCODE
-    if ($rc -ne 0) {
-        Fail-Json -obj $result -message  "Something wrong with connection!"
+    $GitOutput = & cmd /c git.exe ls-remote $RepositoryUrl
+    $GitExitCode = $LASTEXITCODE
+
+    if ($GitExitCode -ne 0) {
+        $Message = @{
+            "detail" = "Failed to read remotes. Check that repository exists and you have permission."
+            "output" = @{
+                "command"   = "git ls-remote $RepositoryUrl"
+                "exit_code" = $GitExitCode
+                "output"    = $GitOutput
+            }
+        }
+        Fail-Json $ModuleResult $Message
     }
 }
 
-function get_version {
+function Get-Version {
     # samples the version of the git repo
     # example:  git rev-parse HEAD
     #           output: 931ec5d25bff48052afae405d600964efd5fd3da
     [CmdletBinding()]
     param(
-        [Parameter(Mandatory = $false, Position = 0)] [string] $refs = "HEAD"
+        [Parameter(Mandatory = $false, Position = 0)]
+        [string] $Refs = "HEAD",
+        [string] $Destination
     )
-    $git_opts = @()
-    $git_opts += "--no-pager"
-    $git_opts += "rev-parse"
-    $git_opts += "$refs"
-    $git_cmd_output = ""
-
-    [hashtable]$Return = @{}
-    Set-Location $dest; &git $git_opts | Tee-Object -Variable git_cmd_output | Out-Null
-    $Return.rc = $LASTEXITCODE
-    $Return.git_output = $git_cmd_output
-
-    return $Return
+    $GitOptions = "--no-pager", "rev-parse", "$Refs"
+    Set-Location $Destination; &git $GitOptions | Out-Null
 }
 
-function checkout {
+function Get-Branch {
     [CmdletBinding()]
-    param()
-    [hashtable]$Return = @{}
-    $local_git_output = ""
-
-    $git_opts = @()
-    $git_opts += "--no-pager"
-    $git_opts += "checkout"
-    $git_opts += "$branch"
-    Set-Location $dest; &git $git_opts | Tee-Object -Variable local_git_output | Out-Null
-
-    $Return.git_output = $local_git_output
-    Set-Location $dest; &git status --short --branch | Tee-Object -Variable branch_status | Out-Null
-    $branch_status = $branch_status.split("/")[1]
-    Set-Attr $result.win_git "branch_status" "$branch_status"
-
-    if ( $branch_status -ne "$branch" ) {
-        Fail-Json $result "Failed to checkout to $branch"
-    }
-
-    return $Return
+    param(
+        [string] $Location
+    )
+    Set-Location $Location
+    $Options = "rev-parse", "--abbrev-ref", "HEAD"
+    $Branch = &git $Options
+    Set-Attr $ModuleResult.status "branch" "$Branch"
+    return "$Branch"
 }
 
-function clone {
+function Test-Branch {
+    [CmdletBinding()]
+    param(
+        [string] $Location,
+        [string] $Branch,
+        [switch] $Fail
+    )
+    $Status = Get-Branch $Location
+    $SameBranch = $Status -eq $Branch
+    if ($Fail -And -Not $SameBranch) {
+        Fail-Json $ModuleResult "Current branch '$Status' is not target branch '$Branch'."
+    }
+    return $SameBranch
+}
+
+function Set-Branch {
+    [CmdletBinding()]
+    param(
+        [string] $Location,
+        [string] $Branch
+    )
+    
+    Set-Location $Location
+    
+    $GitOptions = "--no-pager", "checkout", "$Branch"
+    $GitOutput = &git $GitOptions
+    $GitExitCode = $LASTEXITCODE
+    Set-Attr $ModuleResult.git_actions "checkout" $true
+
+    if ($GitExitCode -ne 0) {
+        $Message = @{
+            "detail" = "Git checkout failed."
+            "output" = @{
+                "command"   = "git $GitOptions"
+                "exit_code" = $GitExitCode
+                "output"    = $GitOutput
+            }
+        }
+        Fail-Json $ModuleResult $Message
+    }
+    
+    Test-Branch $Location $Branch -Fail
+}
+
+function Test-Changes {
+    [CmdletBinding()]
+    param(
+        [string] $Location,
+        [switch] $Fail
+    )
+    $AreEqual = $(&git rev-parse HEAD) -eq $(&git rev-parse "@{u}")
+    Set-Attr $ModuleResult.status "has_changes" (-Not $AreEqual)
+    if ($Fail -And -Not $AreEqual) {
+        Fail-Json $ModuleResult "Head and upstream do not match."
+    }
+    return -Not $AreEqual
+}
+
+function Update-Remote {
+    [CmdletBinding()]
+    param(
+        [string] $Location
+    )
+    Set-Location $Location
+    $GitOptions = "--no-pager", "remote", "update"
+    &git $GitOptions
+    $ModuleResult.git_actions.remote_update = $true
+}
+
+function Test-NeedsUpdate {
+    [CmdletBinding()]
+    param(
+        [string] $Location,
+        [string] $Branch
+    )
+    # Always ensure remote is downloaded.
+    Update-Remote $Location
+    # Test if branch matches.
+    $SameBranches = Test-Branch $Location $Branch
+    if (-Not $SameBranches) {
+        return $true
+    }
+    # Test if there are new changes.
+    $HasChanges = Test-Changes $Location
+    if ($HasChanges) {
+        return $true
+    }
+    # No update is required.
+    return $false
+}
+
+function GitClone {
     # git clone command
     [CmdletBinding()]
-    param()
+    param(
+        [string] $RepositoryUrl,
+        [string] $Destination,
+        [string] $Branch,
+        [Parameter(Mandatory = $false)]
+        [bool] $CheckMode
+    )
 
-    Set-Attr $result.win_git "method" "clone"
-    [hashtable]$Return = @{}
-    $local_git_output = ""
+    if ((Test-Path $Destination) -Or $CheckMode) {
+        Set-Attr $ModuleResult "msg" "Skipping clone because destination already exists."
+        return
+    }
 
-    $git_opts = @()
-    $git_opts += "--no-pager"
-    $git_opts += "clone"
-    $git_opts += $repo
-    $git_opts += $dest
-    $git_opts += "--branch"
-    $git_opts += $branch
+    $GitOptions = "--no-pager", "clone", $RepositoryUrl, $Destination, "--branch", $Branch
     if ($recursive) {
-        $git_opts += "--recursive"
+        $GitOptions += "--recursive"
+    }
+    $GitOutput = &git $GitOptions
+    $GitExitCode = $LASTEXITCODE
+    Set-Attr $ModuleResult.git_actions "clone" $true
+    
+    if ( $GitExitCode -ne 0 ) {
+        $Message = @{
+            "detail" = "Git clone failed."
+            "output" = @{
+                "command"   = "git $GitOptions"
+                "exit_code" = $GitExitCode
+                "output"    = $GitOutput
+            }
+        }
+        Fail-Json $ModuleResult $Message
     }
 
-    Set-Attr $result.win_git "git_opts" "$git_opts"
-
-    #Only clone if $dest does not exist and not in check mode
-    if ( (-Not (Test-Path -Path $dest)) -And (-Not $check_mode)) {
-        &git $git_opts | Tee-Object -Variable local_git_output | Out-Null
-        $Return.rc = $LASTEXITCODE
-        $Return.git_output = $local_git_output
-        Set-Attr $result "cmd_msg" "Successfully cloned $repo into $dest."
-        Set-Attr $result "changed" $true
-        Set-Attr $result.win_git "return_code" $LASTEXITCODE
-        Set-Attr $result.win_git "git_output" $local_git_output
-    }
-    else {
-        $Return.rc = 0
-        $Return.git_output = $local_git_output
-        Set-Attr $result "cmd_msg" "Skipping Clone of $repo becuase $dest already exists"
-    }
-
-    # Check if branch is the correct one
-    Set-Location $dest; &git status --short --branch | Tee-Object -Variable branch_status | Out-Null
-    $branch_status = $branch_status.split("/")[1]
-    Set-Attr $result.win_git "branch_status" "$branch_status"
-
-    if ( $branch_status -ne "$branch" ) {
-        Fail-Json $result "Branch $branch_status is not $branch"
-    }
-
-    return $Return
+    # Check if current branch is the correct one.
+    Test-Branch $Destination $Branch -Fail
 }
 
-function update {
+function GitPull {
     # git clone command
     [CmdletBinding()]
-    param()
-
-    Set-Attr $result.win_git "method" "pull"
-    [hashtable]$Return = @{}
-    $git_output = ""
-
-    # Build Arguments
-    $git_opts = @()
-    $git_opts += "--no-pager"
-    $git_opts += "pull"
-    $git_opts += "origin"
-    $git_opts += "$branch"
-
-    Set-Attr $result.win_git "git_opts" "$git_opts"
-    #Only update if $dest does exist and not in check mode
-    if ((Test-Path -Path $dest) -and (-Not $check_mode)) {
-        # move into correct branch before pull
-        checkout
-        # perform git pull
-        Set-Location $dest; &git $git_opts | Tee-Object -Variable git_output | Out-Null
-        $Return.rc = $LASTEXITCODE
-        $Return.git_output = $git_output
-        Set-Attr $result "cmd_msg" "Successfully updated $repo to $branch."
-        #TODO: handle correct status change when using update
-        Set-Attr $result "changed" $true
-        Set-Attr $result.win_git "return_code" $LASTEXITCODE
-        Set-Attr $result.win_git "git_output" $git_output
-    }
-    else {
-        $Return.rc = 0
-        $Return.git_output = $local_git_output
-        Set-Attr $result "cmd_msg" "Skipping update of $repo"
+    param(
+        [string] $Location,
+        [string] $Branch,
+        [Parameter(Mandatory = $false)]
+        [bool] $CheckMode
+    )
+    
+    # Stop if location does not exist, or in check mode.
+    if ($CheckMode -Or -Not (Test-Path -Path $Location)) {
+        Set-Attr $ModuleResult "msg" "Skipped update; Destination does not exist (or check mode)."
+        return
     }
 
-    return $Return
+    # Stop if already up-to-date.
+    $NeedsUpdate = Test-NeedsUpdate $ModuleParameters.dest $ModuleParameters.branch
+    if (-Not $NeedsUpdate) {
+        Set-Attr $ModuleResult "msg" "Skipped update; No new changes."
+        return
+    }
+    
+    # Move into correct branch.
+    Set-Branch $Location $Branch
+    
+    # Perform git pull.
+    $GitOptions = "--no-pager", "pull", "origin", "$Branch"
+    Set-Location $Location
+    &git $GitOptions
+    Set-Attr $ModuleResult.git_actions "pull" $true
+
+    # TODO: handle correct status change when using update
+    Set-Attr $ModuleResult "msg" "Successfully updated to branch '$branch'."
+    Set-Attr $ModuleResult "changed" $true
 }
-
 
 if ($repo -eq ($null -or "")) {
-    Fail-Json $result "Repository cannot be empty or `$null"
+    Fail-Json $ModuleResult "Repository cannot be empty or `$null"
 }
-Set-Attr $result.win_git "repo" $repo
-Set-Attr $result.win_git "dest" $dest
-
-Set-Attr $result.win_git "replace_dest" $replace_dest
-Set-Attr $result.win_git "accept_hostkey" $accept_hostkey
-Set-Attr $result.win_git "update" $update
-Set-Attr $result.win_git "branch" $branch
-
-
-$git_output = ""
-$rc = 0
 
 try {
 
-    FindGit
+    Find-Git
+    $env:GIT_REDIRECT_STDERR = "2>&1"
 
     if ($replace_dest) {
-        PrepareDestination
+        PrepareDestination -Destination $ModuleParameters.dest -CheckMode $ModuleParameters.check_mode
     }
     if ([system.uri]::IsWellFormedUriString($repo, [System.UriKind]::Absolute)) {
         # http/https repositories doesn't need Ssh handle
         # fix to avoid wrong usage of CheckSshKnownHosts CheckSshIdentity for http/https
-        Set-Attr $result.win_git "valid_url" "$repo is valid url"
+        Set-Attr $ModuleResult.win_git "valid_url" "$repo is valid url"
     }
     else {
-        CheckSshKnownHosts
-        CheckSshIdentity
+        CheckSshKnownHosts $ModuleParameters.repo -AcceptHostkey $ModuleParameters.accept_hostkey
+        CheckSshIdentity $ModuleParameters.repo
     }
-    if ($clone) {
-        clone
+    if ($ModuleParameters.clone) {
+        # TODO: Find better way to pass parameters later.
+        GitClone $ModuleParameters.repo $ModuleParameters.dest $ModuleParameters.branch -CheckMode $ModuleParameters.check_mode
     }
-    if ($update) {
-        update
+    if ($ModuleParameters.update -and -Not $ModuleResult.git_actions.clone) {
+        GitPull $ModuleParameters.dest $ModuleParameters.branch -CheckMode $ModuleParameters.check_mode
     }
 }
 catch {
     $ErrorMessage = $_.Exception.Message
-    Fail-Json $result "Error cloning $repo to $dest! Msg: $ErrorMessage - $git_output"
+    $ErrorTrace = $_.ScriptStackTrace
+    Fail-Json $ModuleResult "Caught exception during PowerShell script. [$ErrorTrace] $ErrorMessage"
 }
 
-Set-Attr $result.win_git "msg" $cmd_msg
-Set-Attr $result.win_git "changed" $changed
-
-Exit-Json $result
+Test-NeedsUpdate $ModuleParameters.dest $ModuleParameters.branch
+Exit-Json $ModuleResult
